Details
-
Bug
-
Resolution: Fixed
-
Critical
-
0.4.15-dev-6956-g6438b85 https://github.com/reactos/reactos/commit/6438b856055f80f456bede220a19534196da4393
Description
Edit by rfb: according to Katayama the Arabic ReactOS does not boot yet / (anymore), see his comment in https://github.com/reactos/reactos/pull/6654#issuecomment-2027287431 When this was discovered the masters state was 0.4.15-dev-7842-g558ab78.
Expected result
The "Arabic - Saudi Arabia" translation still properly made it to the desktop in 0.4.7-release-281-gfa855b5
0.4.7-release-281-gfa855b5_ARABIC_bootCD_madeItToTheDesktop.png
0.4.7-release-281-gfa855b5_ARABIC_bootCD_madeItToTheDesktop.log
Sure, most of it is still en-US, because no resource files, but I even spotted a tiny part of the date-picker during 2nd-stage-syssetup that was Arabic already.
Observed result
according to Katayama the Arabic ReactOS does not boot anymore, see his comment in https://github.com/reactos/reactos/pull/6654#issuecomment-2027287431 When this was discovered the masters state was 0.4.15-dev-7842-g558ab78.
(ntoskrnl/ex/locale.c:218) Failed to query value from Language Groups key (Status 0xc0000034)
|
err:(base/system/winlogon/winlogon.c:578) WL: Failed to initialize SAS
|
Terminating critical process 0xB07A65C8 (winlogon.exe)
|
Break, or Ignore (bi)?
|
kdb:>
|
0.4.15-dev-7842-g558ab78_BSOD0xc000021a_atTheBeginningOf2ndStageSetup.log
Attachments
Issue Links
- blocks
-
CORE-18100 ReactOS renders unbootable after using ROCALL and shutting down
-
- Resolved
-
-
CORE-20035 ReactOS Arabic support
-
- Untriaged
-
- is duplicated by
-
CORE-19934 BSoD at logon screen when using specific languages as a non-unicode language
-
- Resolved
-
- relates to
-
CORE-20213 BSOD 0xc000021a at begining of stage 2 when using Bengali (Bangladesh)
-
- Resolved
-