[0.4.15][SYSSETUP][BOOT][INBV][MSGINA][SDK] Update year to 2025 and set theme using unattend.inf

CORE-19496

All wallpapers that are not in bitmap format will not work on LiveCD. LiveCD has a read-only file system and to apply non bitmap files as wallpapers, we convert them to bitmap when selected as a temporary file. Therefore, only copy non-bitmap wallpapers to BootCD, not LiveCD. Also minor fix to README in the wallpapers folder.

This commit includes:
- Partial revert of dc1a4ae9ce96c9bebdadaeb9f54c3bc9ab651003 [0.4.15][SYSSETUP][BOOT][WALLPAPERS] Set default theme to Mizu and add wallpapers
- 2e47094764559867d1314076a8a215e7b3e79972 [SYSSETUP] Apply theming from unattend files very early on when booting the LiveCD or a new install (#7797)
ebdb7b3e4d423cd949fb054f9ae8abe7f99ddbd9 A problem has been detected and ReactOS has been shut down to prevent damage to your time machine warp core.
- 4bc97ad1450425135d092c52d4e26769177d0328 [BOOTDATA] Arabic, Hong Kong, Singapore, come back! (#7795)