modules/wallpapers/README.txt
@@ -6,7 +6,7 @@ Wallpapers
 |-------------------------------|-----------------------------------------------|--------------------------------------------------------|
 | Borealis Dark.jpg             | Forum user "Angelus" (jedi.knight@wanadoo.es) | https://reactos.org/forum/viewtopic.php?p=50543#p50543 |
 | Borealis.jpg                  | Forum user "Angelus" (jedi.knight@wanadoo.es) | https://reactos.org/forum/viewtopic.php?p=50543#p50543 |
-| Deep Sea.bmp                  | Forum user "Angelus" (jedi.knight@wanadoo.es) | https://reactos.org/forum/viewtopic.php?p=50543#p50543 |
+| Deep Sea.jpg                  | Forum user "Angelus" (jedi.knight@wanadoo.es) | https://reactos.org/forum/viewtopic.php?p=50543#p50543 |
 | Grass.jpg                     | Public domain                                 | https://jira.reactos.org/browse/CORE-8446              |
 | Mizu (16x9).bmp               | Forum user "Foxlet" (foxlet@furcode.co)       | https://jira.reactos.org/browse/CORE-15783             |
 | Mizu (4x3).bmp                | Forum user "Foxlet" (foxlet@furcode.co)       | https://jira.reactos.org/browse/CORE-15783             |
